# config-editor

./: README.md  config-editor.sh  pyproject.toml
.github/workflows/: mypy.yaml  pylint.yaml  ruff.yaml  unit_tests.yaml
src/: __init__.py  config_editor.py
src/gui/: __init__.py  icons.py  main_window.py  menubar.py  status_bar.py  toolbar.py  tooltip.py
src/gui/dialogs/: about_dialog.py  auth_dialog.py  cache_dialog.py  check_configuration.py  data_collection_dialog.py  default_model_dialog.py  default_provider_dialog.py  edit_dialog.py  help_dialog.py  llm_dialog.py  logging_dialog.py  security_profile_dialog.py  tls_dialog.py
src/icons/: added.py  removed.py
tests/: test_dummy.py
